--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,9 @@
   <url>http://www.example.com</url>
 
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-
+    <maven.compiler.source>9</maven.compiler.source>
+    <maven.compiler.target>9</maven.compiler.target>
+</properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -30,6 +29,12 @@
 		  <version>1.18.32</version>
 		  <scope>provided</scope>
 	  </dependency>
+      <dependency>
+        <groupId>com.rabbitmq</groupId>
+        <artifactId>amqp-client</artifactId>
+        <version>5.21.0</version>
+
+        </dependency>
 
   </dependencies>
 
@@ -80,7 +85,7 @@
           <artifactId>exec-maven-plugin</artifactId>
           <version>3.1.1</version>
           <configuration>
-            <mainClass>main.Main</mainClass>
+            <mainClass>job.Job</mainClass>
           </configuration>
         </plugin>
       </plugins>
