--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
           <artifactId>exec-maven-plugin</artifactId>
           <version>3.1.1</version>
           <configuration>
-            <mainClass>job.Job</mainClass>
+              <mainClass>jobScheduler.JobScheduler</mainClass>
           </configuration>
         </plugin>
       </plugins>
